ignore vscode cache

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
+# VScode cache
 *.vsconfig
+*.vscode
 
 /[Ll]ibrary/
 /[Tt]emp/
