Shader upgrades + Bloom + style :)

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/Assets/Real Stars Skybox/*
+
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
